--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -44,6 +44,9 @@
             <a class="" href="#">Политика конфиденциальности</a>
         </div>
     </div>
+    <div id="toTopBtn">
+        <img src="../img/ico/up-btn.svg" alt="">
+    </div>
 </footer>
 <script src="js/app.min.js"></script>
 </body>
