--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -69,7 +69,7 @@
 			<div class="container-content container-content--no-padding">
 				<div class="dop-screen__swiper-container swiper-container">
 					<div class="dop-screen__content-wrapper swiper-wrapper">
-						<div class="dop-screen__item swiper-slide">
+						<div class="dop-screen__item swiper-slide animate-element">
 							<div class="dop-screen__upper-part">
 								<div class="dop-screen__title">Первый прозрачный дисплей</div>
 								<div class="dop-screen__desc">
@@ -86,7 +86,7 @@
 								/>
 							</div>
 						</div>
-						<div class="dop-screen__item swiper-slide">
+						<div class="dop-screen__item swiper-slide animate-element">
 							<div class="dop-screen__upper-part">
 								<div class="dop-screen__title">
 									Максимум внимания, минимум пространства
@@ -105,7 +105,7 @@
 								/>
 							</div>
 						</div>
-						<div class="dop-screen__item swiper-slide">
+						<div class="dop-screen__item swiper-slide animate-element">
 							<div class="dop-screen__upper-part">
 								<div class="dop-screen__title">Комфорт и стиль</div>
 								<div class="dop-screen__desc">
@@ -123,7 +123,7 @@
 								/>
 							</div>
 						</div>
-						<div class="dop-screen__item swiper-slide">
+						<div class="dop-screen__item swiper-slide animate-element">
 							<div class="dop-screen__upper-part">
 								<div class="dop-screen__title">Дополняя реальность</div>
 								<div class="dop-screen__desc">
@@ -219,11 +219,11 @@
 								</div>
 							</div>
 							<div class="second-screen__buttons animate-element">
-								<div class="button button_purple-text second-screen__button">
+								<div class="button button_purple-text second-screen__button" data-href="#purchase">
 									<p>Заказать</p>
 									<img src="../img/ico/percent-ico.svg" alt="" />
 								</div>
-								<div class="button button_purple-text second-screen__button">
+								<div class="button button_purple-text second-screen__button" data-href="#characteristics">
 									<p>Характеристики</p>
 									<img src="../img/ico/characteristic-ico.svg" alt="" />
 								</div>
@@ -371,6 +371,7 @@
 					</div>
 					<div
 						class="button button_purple-text second-screen__button fifth-screen__button"
+						data-href="#purchase"
 					>
 						<p>Заказать</p>
 						<img src="../img/ico/percent-ico.svg" alt="" />
@@ -431,12 +432,14 @@
 						<div class="second-screen__buttons dop-screen2__buttons">
 							<div
 								class="button button_purple-text second-screen__button dop-screen2__button animate-element"
+								data-href="#purchase"
 							>
 								<p>Заказать</p>
 								<img src="../img/ico/percent-ico.svg" alt="" />
 							</div>
 							<div
 								class="button button_purple-text second-screen__button dop-screen2__button animate-element"
+								data-href="#characteristics"
 							>
 								<p>Характеристики</p>
 								<img src="../img/ico/characteristic-ico.svg" alt="" />
