--- a/src/html/header.html
+++ b/src/html/header.html
@@ -22,8 +22,8 @@
                 </ul>
             </nav>
             <div class="header-contacts__buttons">
-                <button class="button button_transparent">Купить</button>
-                <button class="button button_purple-text">Обратная связь</button>
+                <button class="button button_transparent" data-href="#purchase">Купить</button>
+                <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>
             </div>
         </div>
         <img class="header__logo--mob-top logo for-mob-block" src="../img/ico/logo-mob-new.svg" alt="">
