corrected adress, utp, price

--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -219,11 +219,17 @@
 								</div>
 							</div>
 							<div class="second-screen__buttons animate-element">
-								<div class="button button_purple-text second-screen__button" data-href="#purchase">
+								<div
+									class="button button_purple-text second-screen__button"
+									data-href="#purchase"
+								>
 									<p>Заказать</p>
 									<img src="../img/ico/percent-ico.svg" alt="" />
 								</div>
-								<div class="button button_purple-text second-screen__button" data-href="#characteristics">
+								<div
+									class="button button_purple-text second-screen__button"
+									data-href="#characteristics"
+								>
 									<p>Характеристики</p>
 									<img src="../img/ico/characteristic-ico.svg" alt="" />
 								</div>
@@ -338,7 +344,7 @@
 						</button>
 						<button class="button second-screen__button four-screen__button">
 							<img src="../img/ico/vr.svg" alt="" />
-							<p>VR</p>
+							<p>AR</p>
 						</button>
 						<button class="button second-screen__button four-screen__button">
 							<img src="../img/ico/photo.svg" alt="" />
@@ -490,10 +496,6 @@
 							<div class="width-1000-1300">
 								<div class="list-wrapper">
 									<div class="list-item">
-										первая аренда
-										<span>со скидкой 20%</span>
-									</div>
-									<div class="list-item">
 										третий день аренды
 										<span>бесплатно</span>
 									</div>
@@ -534,7 +536,7 @@
 											</div>
 											<div class="tab-content__item">
 												<div class="tab-content__key">не сенсорный</div>
-												<div class="tab-content__value">1 000 000 р</div>
+												<div class="tab-content__value">1 600 000 р</div>
 											</div>
 										</div>
 										<div class="rent-content__tab-content tab-content">
@@ -598,10 +600,6 @@
 								></script>
 								<div class="width-900-1600">
 									<div class="list-wrapper six-screen-anim">
-										<div class="list-item">
-											первая аренда
-											<span>со скидкой 20%</span>
-										</div>
 										<div class="list-item">
 											третий день аренды
 											<span>бесплатно</span>
