video added, small fixes

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,17 +7,17 @@
                     <a href="#holostand">
                         <li class="menu__item menu-items-txt">Kelpi3 holostand</li>
                     </a>
-                    <a href="#characteristics">
-                        <li class="menu__item menu-items-txt">Характеристики</li>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Технологии</li>
                     </a>
-                    <a href="#interactive">
-                        <li class="menu__item menu-items-txt">Интерактив</li>
-                    </a>
-                    <a href="#using">
+                    <a href="#">
                         <li class="menu__item menu-items-txt">Сценарии использования</li>
                     </a>
-                    <a href="#rent">
-                        <li class="menu__item menu-items-txt">Аренда и продажа</li>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Портфолио</li>
+                    </a>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Контакты</li>
                     </a>
                 </ul>
             </nav>
@@ -26,6 +26,11 @@
                 <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>
             </div>
         </div>
+        <nav class="header__nav for-desc-block">
+                <ul class="header__submenu">
+                    <!-- Подгрузка из header.js -->
+                </ul>
+            </nav>
         <img class="header__logo--mob-top logo for-mob-block" src="../img/ico/logo-mob-new.svg" alt="">
         <div class="burger for-mob-block">
             <div class="burger__center-stick"></div>
@@ -43,21 +48,21 @@
                 <li class="mob-menu__items">Kelpi3 holostand</li>
             </a>
             <a href="#characteristics">
-                <li class="mob-menu__items">Характеристики</li>
+                <li class="mob-menu__items">Технологии</li>
             </a>
             <a href="#interactive">
-                <li class="mob-menu__items">Интерактив</li>
-            </a>
-            <a href="#using">
                 <li class="mob-menu__items">Сценарии использования</li>
             </a>
+            <a href="#using">
+                <li class="mob-menu__items">Портфолио</li>
+            </a>
             <a href="#rent">
-                <li class="mob-menu__items">Аренда и продажа</li>
+                <li class="mob-menu__items">Контакты</li>
             </a>
         </div>
         <div class="mob-menu__buttons">
-            <button class="button button_transparent mob-menu__button">Купить</button>
-            <button class="button button_purple-text mob-menu__button">Обратная связь</button>
+            <button class="button button_transparent mob-menu__button" data-href="#purchase">Купить</button>
+            <button class="button button_purple-text mob-menu__button" data-href="#feedback">Обратная связь</button>
         </div>
     </div>
 </div>
