video added, small fixes, etc

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -26,7 +26,7 @@
                 <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>
             </div>
         </div>
-        <nav class="header__nav for-desc-block">
+        <nav class="header__subnav for-desc-block">
                 <ul class="header__submenu">
                     <!-- Подгрузка из header.js -->
                 </ul>
