--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -335,7 +335,7 @@
 				<div class="dop-screen2__content-wrapper">
 					<div class="dop-screen2__left-part dop-screen2__part">
 						<p class="rent-content__title six-screen-anim dop-screen2__title animate-element">
-							Аренда и контент
+							Сценарии использования
 						</p>
 						<div class="rent-content__tabs six-screen-anim dop-screen2__tabs">
 							<div class="rent-content__tab dop-screen2__tab animate-element">
