without fixings screens

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -30,13 +30,13 @@
                 </ul>
             </div>
             <div class="footer__part footer__right">
-                <address>г. Москва, 2-й Южнопортовый пр., 26Ас32</address>
+                <address>г. Новосибирск, ул. Депутатская 58/1 (2 этаж),</address>
                 <p>Пн-Пт с 10:00 до 19:00</p>
-                <p>+7 (929) 676-46-82</p>
+                <p>+7 (383) 209-91-91</p>
                 <div class="footer__socials socials">
-                    <div class="socials__item"><img class="socials__ico" src="../img/ico/tg-ico.svg" alt=""></div>
-                    <div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div>
-                    <div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div>
+                    <a href="https://vk.com/gefestnovosib" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/vk-ico.svg" alt=""></div></a>
+                    <a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div></a>
+                    <a href="https://instagram.com/gefestcapital" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div></a>
                 </div>
             </div>
         </div>
@@ -49,6 +49,8 @@
     </div>
 </footer>
 <script src="js/app.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script> -->
+
 </body>
 
 </html>
