--- a/src/html/modals/modalMainVideo.html
+++ b/src/html/modals/modalMainVideo.html
@@ -2,8 +2,7 @@
     <div class="modal-content">
         <span class="close for-desc-block">&times;</span>
         <video controls id="video-main">
-            <source src="../video/Kelpie_Holostand_OLED_55.mp4" type="video/mp4">
-            <!-- Ваш браузер не поддерживает HTML5 видео. -->
+            <source src="../../video/Kelpie Holostand Oled 55.webm" type="video/webm">
         </video>
     </div>
 </div>
