--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -3,18 +3,21 @@
 		<div class="container-page-margin shadow">
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/tg-ico.svg" alt="" />
+					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
+							src="../img/ico/vk-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/youtube-ico.svg" alt="" />
+					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
+							src="../img/ico/youtube-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/inst-ico.svg" alt="" />
+					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
+							src="../img/ico/inst-ico.svg" alt="" /></a>
 				</div>
 			</div>
 			<div class="scroll-ico absolutX-center for-desc-block">
 				<img src="../img/ico/scroll-ico.svg" alt="" />
-			</div> 
+			</div>
 
 			<div class="first-screen__bcg container-content container-content--no-margin">
 				<div class="container-relative">
@@ -42,8 +45,8 @@
 							<img src="../img/Product-page/1-screen-2-elem.svg" alt="" />
 						</div>
 						<div class="first-screen__content animate-element for-desc-block"
-							data-firstScreen-content="3-content">
-							<img src="../img/Product-page/1-screen-3-elem.png" alt="" />
+							data-firstScreen-content="3-content" style="width: 100%;">
+							<img src="../img/ico/logo.svg" alt="" style="width: 70%; margin: 0 auto;" />
 						</div>
 					</div>
 				</div>
@@ -113,7 +116,44 @@
 								<img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image" />
 							</div>
 						</div>
+						<div class="dop-screen__item swiper-slide animate-element">
+							<div class="dop-screen__upper-part">
+								<div class="dop-screen__title">Применяйте OLED-дисплей в широком спектре
+									задач.</div>
+								<div class="dop-screen__desc">
+									За дисплеем можно поместить любой объект и раскрыть его с совершенно
+									новой стороны: рассказать на прозрачном экране историю его создания,
+									поместить инструкцию по применению, дополнить объект фото/видео его
+									внутреннего устройства или показать, как объект вписывается в разные
+									сценарии жизни пользователей. Нет никаких пределов!
+								</div>
+							</div>
+							<div class="dop-screen__downer-part">
+								<img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image" />
+							</div>
+						</div>
+						<div class="dop-screen__item swiper-slide animate-element">
+							<div class="dop-screen__upper-part">
+								<div class="dop-screen__title">Интегрируйте любые рекламные инструменты на OLED-дисплей</div>
+								<div class="dop-screen__desc">
+									В магазине, автосалоне, ресторане, на ресепшен, в качестве витрины и
+									презентационной стойки. Транслируйте любой контент (фото, видео, текст,
+									графика, логотипы, голограммы, видео-мосты) в новом формате и собирайте
+									восторженные отзывы, налаживайте коммуникацию с аудиторией,
+									взаимодействуйте качественно и на перспективу.
+								</div>
+							</div>
+							<div class="dop-screen__downer-part">
+								<img src="../img/Product-page/dop-screen-4.png" alt="" class="dop-screen__image" />
+							</div>
+						</div>
 					</div>
+					<div class="swiper-pagination"></div>
+					<!-- <div class="rent-content-swiper__nav dop-screen-swiper__nav">
+						<div class="swiper-button-prev rent-content-left dop-screen__left"></div>
+						<div class="dop-screen__counter"></div>
+						<div class="swiper-button-next rent-content-right dop-screen__right"></div>
+					</div> -->
 
 					<!-- <div class="dop-screen__content-wrapper"> -->
 
@@ -125,7 +165,7 @@
 
 	<section id="characteristics" class="screen second-screen scrolling-item">
 		<div class="container-page">
-			<div class="container-content">
+			<div class="second-screen__container container-content">
 				<div class="second-screen__content-wrapper">
 					<div class="second-screen__content">
 						<div class="second-screen__left-part">
@@ -190,7 +230,7 @@
 								</div>
 							</div>
 							<div class="second-screen__buttons animate-element">
-								<div class="button button_purple-text second-screen__button" data-href="#purchase">
+								<div class="button button_purple-text second-screen__button" data-href="#rent">
 									<p>Заказать</p>
 									<img src="../img/ico/percent-ico.svg" alt="" />
 								</div>
@@ -208,7 +248,7 @@
 	</section>
 	<section id="video" class="screen third-screen scrolling-item">
 		<div class="third-screen__video for-desc-flex">
-			<video autoplay muted loop src="../video/Kelpie_Holostand_OLED_55.mp4"></video>
+			<video autoplay muted loop src="../video/Kelpie Holostand Oled 55_preview.webm"></video>
 		</div>
 		<div class="container-page">
 			<div class="container-content">
@@ -227,7 +267,7 @@
 							<img src="../img/ico/Forward.svg" alt="" />
 						</button>
 					</div>
-					<div class="third-screen__text-block">
+					<!-- <div class="third-screen__text-block">
 						<h2 class="animate-element transition">
 							Применяйте OLED-дисплей в максимально широком спектре задач.
 						</h2>
@@ -251,7 +291,7 @@
 							восторженные отзывы, налаживайте коммуникацию с аудиторией,
 							взаимодействуйте качественно и на перспективу.
 						</p>
-					</div>
+					</div> -->
 					<button class="button second-screen__button third-screen__button for-desc-flex">
 						<p>Смотреть видео</p>
 						<img src="../img/ico/Forward.svg" alt="" />
@@ -264,13 +304,16 @@
 		<div class="container-page-margin">
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/tg-ico.svg" alt="" />
+					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
+							src="../img/ico/vk-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/youtube-ico.svg" alt="" />
+					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
+							src="../img/ico/youtube-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
-					<img class="socials__ico" src="../img/ico/inst-ico.svg" alt="" />
+					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
+							src="../img/ico/inst-ico.svg" alt="" /></a>
 				</div>
 			</div>
 			<div class="scroll-ico absolutX-center for-desc-block">
@@ -279,7 +322,7 @@
 
 			<div class="four-screen__bcg container-content container-content--no-margin">
 				<div class="container-relative">
-					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-1-item.png" alt="" />
+					<img class="four-screen__rama-item" src="../img/Product-page/1-screen-2-elem.svg" alt="" />
 					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-3-item.png" alt="" />
 					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-2-item.png" alt="" />
 					<div class="four-screen__rama">
@@ -293,7 +336,7 @@
 						</button>
 						<button class="button second-screen__button four-screen__button">
 							<img src="../img/ico/vr.svg" alt="" />
-							<p>VR</p>
+							<p>AR</p>
 						</button>
 						<button class="button second-screen__button four-screen__button">
 							<img src="../img/ico/photo.svg" alt="" />
@@ -304,8 +347,8 @@
 			</div>
 		</div>
 	</section>
-	<section class="screen fifth-screen scrolling-item">
-		<div class="container-page">
+	<section class="screen scrolling-item"> <!-- fifth-screen -->
+		<!-- <div class="container-page">
 			<div class="container-content">
 				<div class="fifth-screen__content">
 					<div class="fifth-screen__text-block">
@@ -320,16 +363,15 @@
 							немного креативности!
 						</h3>
 					</div>
-					<div class="button button_purple-text second-screen__button fifth-screen__button"
-						data-href="#purchase">
+					<div class="button button_purple-text second-screen__button fifth-screen__button" data-href="#rent">
 						<p>Заказать</p>
 						<img src="../img/ico/percent-ico.svg" alt="" />
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</section>
-	<section id="rent" class="screen dop-screen2">
+	<!-- <section id="rent" class="screen dop-screen2">
 		<div class="container-page">
 			<div class="container-content">
 				<div class="dop-screen2__content-wrapper">
@@ -395,31 +437,38 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
-	<section id="purchase" class="screen sixth-screen scrolling-item">
+	<section id="rent" class="screen sixth-screen scrolling-item">
 		<div class="container-page">
-			<div class="container-content">
+			<div class="sixth-screen__container container-content">
 				<div class="sixth-screen__content-wrapper">
 					<div class="sixth-screen__parts">
+						<p class="rent-content__title six-screen-anim for-mob-block">Аренда и контент</p>
 						<div class="sixth-screen__left-part">
 							<div class="sixth-screen__content">
 								<div id="rent-content-swiper"
 									class="swiper-container rent-content-swiper animate-element">
 									<div class="swiper-wrapper">
 										<div class="swiper-slide rent-content-slide">
-											<img src="../img/Product-page/6-slider-1.png" />
+											<img src="../img/Product-page/gallery/SHOT5138-min.jpg" />
 										</div>
 										<div class="swiper-slide rent-content-slide">
-											<img src="../img/Product-page/6-slider-1.png" />
+											<img src="../img/Product-page/gallery/SHOT5226-min.jpg" />
 										</div>
 										<div class="swiper-slide rent-content-slide">
-											<img src="../img/Product-page/6-slider-1.png" />
+											<img src="../img/Product-page/gallery/SHOT5241-min.jpg" />
+										</div>
+										<div class="swiper-slide rent-content-slide">
+											<img src="../img/Product-page/gallery/SHOT5277-min.jpg" />
+										</div>
+										<div class="swiper-slide rent-content-slide">
+											<img src="../img/Product-page/gallery/SHOT5295-min.jpg" />
 										</div>
 									</div>
 									<div class="rent-content-swiper__nav">
 										<div class="swiper-button-prev rent-content-left"></div>
-										<div id="counter" class="counterMain">1/3</div>
+										<div id="counter" class="counterMain"></div>
 										<div class="swiper-button-next rent-content-right"></div>
 									</div>
 								</div>
@@ -430,22 +479,22 @@
 										первая аренда
 										<span>со скидкой 20%</span>
 									</div> -->
-									<div class="list-item">
+									<!-- <div class="list-item">
 										третий день аренды
 										<span>бесплатно</span>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
 
 						<div class="sixth-screen__right-part sixth-screen__content animate-element">
 							<div class="rent-content__container">
-								<p class="rent-content__title six-screen-anim">Аренда и контент</p>
+								<p class="rent-content__title six-screen-anim for-desc-block">Аренда и контент</p>
 								<div class="rent-content__content-wrapper">
 									<div class="rent-content__tabs six-screen-anim">
+										<div class="rent-content__tab six-screen__tab">Аренда</div>
 										<div class="rent-content__tab six-screen__tab">Покупка</div>
 										<div class="rent-content__tab six-screen__tab">Контент</div>
-										<div class="rent-content__tab six-screen__tab">Аренда</div>
 									</div>
 									<div class="rent-content__tab-contents">
 										<div class="rent-content__tab-content tab-content">
@@ -465,11 +514,11 @@
 										<div class="rent-content__tab-content tab-content">
 											<div class="tab-content__item">
 												<div class="tab-content__key">сенсорный</div>
-												<div class="tab-content__value">1 500 000 р</div>
+												<div class="tab-content__value">1 600 000 р</div>
 											</div>
 											<div class="tab-content__item">
 												<div class="tab-content__key">не сенсорный</div>
-												<div class="tab-content__value">1 000 000 р</div>
+												<div class="tab-content__value">1 500 000 р</div>
 											</div>
 										</div>
 										<div class="rent-content__tab-content tab-content">
@@ -511,7 +560,7 @@
 											на обработку персональных данных
 										</p>
 										<button
-											class="rent-content-form__submit button button_purple-text button_purple-text--submit"
+											class="rent-content-form__submit button button_purple-text button_purple-text--submit max-w-320"
 											type="submit">
 											Отправить
 										</button>
@@ -519,7 +568,7 @@
 								</form>
 								<script async
 									src="https://okocrm.ru/static/oko-static/js/form.js?token=DGklp8IO7_iwlJgAzOp8Cw65VsZDw27EwagtkfzAb4A0LeP3klBWcCB2r-QFx-NS7vSntheO1Pe5hx7rn_Etc_IY8p2HQnscsHo4xRZRWU084a3wSrZemcC95ymMjfwcnNaaMrQB2PStjLzA4Gq4C1OvT7IME36xium5xPZdX2UNFLo3cXDhC107aPHdlHAMa4wy9HegDfL5zk70zqFX4lUYh86hYTNAQkWXhmOl0GSLkpKPcbywk9y3Koj9xR0VxCGUrOJ1GXiBSwHwczBqdX050pGQIFI8sFG2U4Es5bMdRTo4VLEmm2plF2iZ7QIg9j0qgLRP_4Pi4JTJ6nbMuw%3D%3D"></script>
-								<div class="width-900-1600">
+								<div class="">
 									<div class="list-wrapper six-screen-anim">
 										<!-- <div class="list-item">
 											первая аренда
@@ -594,7 +643,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="sixth-screen__left-part-downer">
+					<!-- <div class="sixth-screen__left-part-downer">
 						<div class="rent-content__conditionals width-1000-1600">
 							<p class="six-screen-anim">Условия размещения</p>
 							<div class="rent-content__conditionals-items six-screen-anim">
@@ -619,12 +668,12 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="screen seventh-screen scrolling-item">
+	<section id="portfolio" class="screen seventh-screen scrolling-item">
 		<div class="container-page-margin">
 			<div class="scroll-ico absolutX-center for-desc-block">
 				<img src="../img/ico/scroll-ico.svg" alt="" />
@@ -634,7 +683,7 @@
 				<div class="container-relative container-relative--z-index">
 					<div class="rent-content-swiper__nav seventh-screen__swiper-nav">
 						<div class="swiper-button-prev rent-content-left seventh-screen__left"></div>
-						<div class="counterMain seventh-screen__counter">1/3</div>
+						<div class="counterMain seventh-screen__counter"></div>
 						<div class="swiper-button-next rent-content-right seventh-screen__right"></div>
 					</div>
 				</div>
