--- a/src/html/test.html
+++ b/src/html/test.html
@@ -1,15 +1,104 @@
-<div class="container blue">
-    <div class="text">Текст номер 1</div>
-    <div class="text">Текст номер 2</div>
-    <div class="text">Текст номер 3</div>
-</div>
-<div class="container red">
-    <div class="text">Текст номер 1</div>
-    <div class="text">Текст номер 2</div>
-    <div class="text">Текст номер 3</div>
-</div>
-<div class="container yellow">
-    <div class="text">Текст номер 1</div>
-    <div class="text">Текст номер 2</div>
-    <div class="text">Текст номер 3</div>
+<div class="content">
+	<section id="about" class="screen first-screen scrolling-item">
+		<div class="container-page-margin shadow">
+			<div class="socials abolusteY-center for-desc-flex">
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/tg-ico.svg" alt="" />
+				</div>
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/youtube-ico.svg" alt="" />
+				</div>
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/inst-ico.svg" alt="" />
+				</div>
+			</div>
+			<div class="scroll-ico absolutX-center for-desc-block">
+				<img src="../img/ico/scroll-ico.svg" alt="" />
+			</div> 
+
+			<div class="first-screen__bcg container-content container-content--no-margin">
+				<div class="container-relative">
+					<h1 class="title first-screen__first-title animate-element" data-animate="firstScreenText">
+						Уникальная технология, которую легко применить уже сегодня
+					</h1>
+					<h1 class="title first-screen__first-title animate-element for-desc-block"
+						data-animate="firstScreen">
+						VR-эффект без дополнительного оборудования
+					</h1>
+					<h1 class="title first-screen__first-title animate-element for-desc-block"
+						data-animate="firstScreen">
+						OLED-transparent для реализации самых креативных рекламных решений
+					</h1>
+
+					<div class="rama rama--circle">
+						<div id="switcher" class="switcher screen__content animate-element">
+							<div class="switcher__holder">
+								<img src="../img/ico/switcher1.svg" alt="" />
+								<div class="switcher__toggler" data-animate="firstScreen"></div>
+							</div>
+						</div>
+						<div class="first-screen__content animate-element for-desc-block"
+							data-firstScreen-content="2-content">
+							<img src="../img/Product-page/1-screen-2-elem.svg" alt="" />
+						</div>
+						<div class="first-screen__content animate-element for-desc-block"
+							data-firstScreen-content="3-content">
+							<img src="../img/Product-page/1-screen-3-elem.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    <section id="about" class="screen first-screen scrolling-item">
+		<div class="container-page-margin shadow">
+			<div class="socials abolusteY-center for-desc-flex">
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/tg-ico.svg" alt="" />
+				</div>
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/youtube-ico.svg" alt="" />
+				</div>
+				<div class="socials__item">
+					<img class="socials__ico" src="../img/ico/inst-ico.svg" alt="" />
+				</div>
+			</div>
+			<div class="scroll-ico absolutX-center for-desc-block">
+				<img src="../img/ico/scroll-ico.svg" alt="" />
+			</div> 
+
+			<div class="first-screen__bcg container-content container-content--no-margin">
+				<div class="container-relative">
+					<h1 class="title first-screen__first-title animate-element" data-animate="firstScreenText">
+						Уникальная технология, которую легко применить уже сегодня
+					</h1>
+					<h1 class="title first-screen__first-title animate-element for-desc-block"
+						data-animate="firstScreen">
+						VR-эффект без дополнительного оборудования
+					</h1>
+					<h1 class="title first-screen__first-title animate-element for-desc-block"
+						data-animate="firstScreen">
+						OLED-transparent для реализации самых креативных рекламных решений
+					</h1>
+
+					<div class="rama rama--circle">
+						<div id="switcher" class="switcher screen__content animate-element">
+							<div class="switcher__holder">
+								<img src="../img/ico/switcher1.svg" alt="" />
+								<div class="switcher__toggler" data-animate="firstScreen"></div>
+							</div>
+						</div>
+						<div class="first-screen__content animate-element for-desc-block"
+							data-firstScreen-content="2-content">
+							<img src="../img/Product-page/1-screen-2-elem.svg" alt="" />
+						</div>
+						<div class="first-screen__content animate-element for-desc-block"
+							data-firstScreen-content="3-content">
+							<img src="../img/Product-page/1-screen-3-elem.png" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
