changed contacts, img x2

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -30,8 +30,8 @@
                 </ul>
             </div>
             <div class="footer__part footer__right">
-                <address>г. Новосибирск, ул. Депутатская 58/1 (2 этаж),</address>
-                <p>Пн-Пт с 10:00 до 19:00</p>
+                <address>г. Новосибирск, ул. Депутатская 58/1<br>(2 этаж)</address>
+                <p>Пн-Пт с 09:00 до 18:00</p>
                 <p>+7 (383) 209-91-91</p>
                 <div class="footer__socials socials">
                     <a href="https://vk.com/gefestnovosib" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/vk-ico.svg" alt=""></div></a>
