--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -34,20 +34,20 @@
 					</h1>
 
 					<div class="rama rama--circle">
-						<div id="switcher" class="switcher screen__content animate-element">
+						<!-- <div id="switcher" class="switcher screen__content animate-element">
 							<div class="switcher__holder">
 								<img src="../img/ico/switcher1.svg" alt="" />
 								<div class="switcher__toggler" data-animate="firstScreen"></div>
 							</div>
-						</div>
-						<div class="first-screen__content animate-element for-desc-block"
+						</div> -->
+						<!-- <div class="first-screen__content animate-element for-desc-block"
 							data-firstScreen-content="2-content">
 							<img src="../img/Product-page/1-screen-2-elem.svg" alt="" />
 						</div>
 						<div class="first-screen__content animate-element for-desc-block"
 							data-firstScreen-content="3-content" style="width: 100%;">
 							<img src="../img/ico/logo.svg" alt="" style="width: 70%; margin: 0 auto;" />
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -134,7 +134,8 @@
 						</div>
 						<div class="dop-screen__item swiper-slide animate-element">
 							<div class="dop-screen__upper-part">
-								<div class="dop-screen__title">Интегрируйте любые рекламные инструменты на OLED-дисплей</div>
+								<div class="dop-screen__title">Интегрируйте любые рекламные инструменты на OLED-дисплей
+								</div>
 								<div class="dop-screen__desc">
 									В магазине, автосалоне, ресторане, на ресепшен, в качестве витрины и
 									презентационной стойки. Транслируйте любой контент (фото, видео, текст,
@@ -514,11 +515,11 @@
 										<div class="rent-content__tab-content tab-content">
 											<div class="tab-content__item">
 												<div class="tab-content__key">сенсорный</div>
-												<div class="tab-content__value">1 600 000 р</div>
+												<div class="tab-content__value">2 000 000 р</div>
 											</div>
 											<div class="tab-content__item">
 												<div class="tab-content__key">не сенсорный</div>
-												<div class="tab-content__value">1 500 000 р</div>
+												<div class="tab-content__value">1 800 000 р</div>
 											</div>
 										</div>
 										<div class="rent-content__tab-content tab-content">
@@ -678,28 +679,23 @@
 			<div class="scroll-ico absolutX-center for-desc-block">
 				<img src="../img/ico/scroll-ico.svg" alt="" />
 			</div>
-
-			<div class="seventh-screen__bcg container-content">
-				<div class="container-relative container-relative--z-index">
-					<div class="rent-content-swiper__nav seventh-screen__swiper-nav">
-						<div class="swiper-button-prev rent-content-left seventh-screen__left"></div>
-						<div class="counterMain seventh-screen__counter"></div>
-						<div class="swiper-button-next rent-content-right seventh-screen__right"></div>
+			<div class="swiper-container seventh-screen__swiper-container">
+				<div class="swiper-wrapper seventh-screen__swiper-wrapper">
+					<div class="swiper-slide seventh-screen__swiper-slide">
+						<img src="../img/Product-page/port_1.png" alt="" class="seventh-screen__slide-img" />
+					</div>
+					<div class="swiper-slide seventh-screen__swiper-slide">
+						<img src="../img/Product-page/port_3.png" alt="" class="seventh-screen__slide-img" />
+					</div>
+					<div class="swiper-slide seventh-screen__swiper-slide">
+						<img src="../img/Product-page/port_2.png" alt="" class="seventh-screen__slide-img" />
 					</div>
 				</div>
-				<div class="swiper-container seventh-screen__swiper-container">
-					<div class="swiper-wrapper seventh-screen__swiper-wrapper">
-						<div class="swiper-slide seventh-screen__swiper-slide">
-							<img src="../img/Product-page/7-screen-bg1.png" alt="" class="seventh-screen__slide-img" />
-						</div>
-						<div class="swiper-slide seventh-screen__swiper-slide">
-							<img src="../img/Product-page/hero-bg.png" alt="" class="seventh-screen__slide-img" />
-						</div>
-						<div class="swiper-slide seventh-screen__swiper-slide">
-							<img src="../img/Product-page/4-screen-bg1.png" alt="" class="seventh-screen__slide-img" />
-						</div>
-					</div>
-				</div>
+			</div>
+			<div class="rent-content-swiper__nav seventh-screen__swiper-nav">
+				<div class="swiper-button-prev rent-content-left seventh-screen__left"></div>
+				<div class="counterMain seventh-screen__counter"></div>
+				<div class="swiper-button-next rent-content-right seventh-screen__right"></div>
 			</div>
 		</div>
 	</section>
