--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -48,7 +48,7 @@
         <img src="../img/ico/up-btn.svg" alt="">
     </div>
 </footer>
-<script src="js/app.min.js"></script>
+<script src="js/app.min.js?v=3"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script> -->
 
 </body>
