--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -4,15 +4,15 @@
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
 					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
-							src="../img/ico/vk-ico.svg" alt="" /></a>
+							src="../img/ico/vk.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
 					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
-							src="../img/ico/youtube-ico.svg" alt="" /></a>
+							src="../img/ico/Ютуб.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
 					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
-							src="../img/ico/inst-ico.svg" alt="" /></a>
+							src="../img/ico/inst.svg" alt="" /></a>
 				</div>
 			</div>
 			<div class="scroll-ico absolutX-center for-desc-block">
@@ -317,9 +317,9 @@
 							src="../img/ico/inst-ico.svg" alt="" /></a>
 				</div>
 			</div>
-			<div class="scroll-ico absolutX-center for-desc-block">
-				<img src="../img/ico/scroll-ico.svg" alt="" />
-			</div>
+<!--			<div class="scroll-ico absolutX-center for-desc-block">-->
+<!--				<img src="../img/ico/scroll-ico.svg" alt="" />-->
+<!--			</div>-->
 
 			<div class="four-screen__bcg container-content container-content--no-margin">
 				<div class="container-relative">
@@ -490,7 +490,7 @@
 
 						<div class="sixth-screen__right-part sixth-screen__content animate-element">
 							<div class="rent-content__container">
-								<p class="rent-content__title six-screen-anim for-desc-block">Аренда и контент</p>
+								<p class="rent-content__title six-screen-anim for-desc-block">Аренда* и контент</p>
 								<div class="rent-content__content-wrapper">
 									<div class="rent-content__tabs six-screen-anim">
 										<div class="rent-content__tab six-screen__tab">Аренда</div>
@@ -538,6 +538,10 @@
 										</div>
 									</div>
 								</div>
+								<div class="list-item mt-40">
+									*третий день аренды
+									<span>бесплатно</span>
+								</div>
 								<form id="rent-content-form" class="rent-content-form">
 									<div class="rent-content-form__row six-screen-anim">
 										<div class="form-item">
@@ -553,6 +557,11 @@
 											<label for="email"></label>
 											<input type="email" id="email" name="email" placeholder="Ваш email" />
 										</div>
+										<button
+											class="rent-content-form__submit button button_purple-text button_submit"
+											type="submit">
+											Отправить
+										</button>
 									</div>
 									<div class="rent-content-form__row six-screen-anim">
 										<p>
@@ -560,11 +569,7 @@
 											<a href="#">соглашаетесь</a>
 											на обработку персональных данных
 										</p>
-										<button
-											class="rent-content-form__submit button button_purple-text button_purple-text--submit max-w-320"
-											type="submit">
-											Отправить
-										</button>
+
 									</div>
 								</form>
 								<script async
@@ -575,26 +580,21 @@
 											первая аренда
 											<span>со скидкой 20%</span>
 										</div> -->
-										<div class="list-item">
-											третий день аренды
-											<span>бесплатно</span>
-										</div>
+<!--										<div class="list-item">-->
+<!--											третий день аренды-->
+<!--											<span>бесплатно</span>-->
+<!--										</div>-->
 									</div>
 									<div class="rent-content__conditionals">
 										<p class="six-screen-anim">Условия размещения</p>
-										<div class="rent-content__conditionals-items six-screen-anim">
+										<div class="rent-content__conditionals-items six-screen-anim near-form">
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot"></div>
-												<div class="tab__key">свободное пространство</div>
-												<div class="">
-													1 м
-													<sup>2</sup>
-												</div>
+												<div class="tab__key">свободное пространство - <span class="spans-highlight">1м2</span></div>
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot"></div>
-												<div class="tab__key">питание</div>
-												<div class="">220В</div>
+												<div class="tab__key">питание - <span class="spans-highlight">220В</span></div>
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot"></div>
@@ -623,16 +623,11 @@
 								<div class="rent-content__conditionals-items six-screen-anim">
 									<div class="second-screen__tab tab rent-content__conditionals-tab">
 										<div class="tab__dot"></div>
-										<div class="tab__key">свободное пространство</div>
-										<div class="">
-											1 м
-											<sup>2</sup>
-										</div>
+										<div class="tab__key">свободное пространство - <span class="spans-highlight">1м2</span></div>
 									</div>
 									<div class="second-screen__tab tab rent-content__conditionals-tab">
 										<div class="tab__dot"></div>
-										<div class="tab__key">питание</div>
-										<div class="">220В</div>
+										<div class="tab__key">питание - <span class="spans-highlight">220В</span></div>
 									</div>
 									<div class="second-screen__tab tab rent-content__conditionals-tab">
 										<div class="tab__dot"></div>
