--- a/src/html/header.html
+++ b/src/html/header.html
@@ -45,35 +45,42 @@
         </div>
         <div class="mob-menu__nav">
             <a href="#holostand">
-                <li class="mob-menu__items">Kelpie holostand</li>
+                <li class="mob-menu__items">Описание</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
             <a href="#characteristics">
-                <li class="mob-menu__items">Технологии</li>
+                <li class="mob-menu__items">Характеристики</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
-            <a href="#interactive">
-                <li class="mob-menu__items">Сценарии использования</li>
-                <div class="sub-mob-menu">
-
-                </div>
-            </a>
-
-            <a href="#using">
-                <li class="mob-menu__items">Портфолио</li>
+            <a href="#video">
+                <li class="mob-menu__items">Видео</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
             <a href="#rent">
-                <li class="mob-menu__items">Контакты</li>
+                <li class="mob-menu__items">Аренда и контент</li>
+                <div class="sub-mob-menu">
+
+                </div>
+            </a>
+
+            <a href="#portfolio">
+                <li class="mob-menu__items">Портфолио</li>
+                <div class="sub-mob-menu">
+
+                </div>
+            </a>
+
+            <a href="#feedback">
+                <li class="mob-menu__items">Связаться</li>
                 <div class="sub-mob-menu">
 
                 </div>
