--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -4,15 +4,15 @@
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
 					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
-							src="../img/ico/vk.svg" alt="" /></a>
+							src="../img/ico/tg-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
 					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
-							src="../img/ico/Ютуб.svg" alt="" /></a>
+							src="../img/ico/youtube-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
 					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
-							src="../img/ico/inst.svg" alt="" /></a>
+							src="../img/ico/inst-ico.svg" alt="" /></a>
 				</div>
 			</div>
 			<div class="scroll-ico absolutX-center for-desc-block">
