-correction: sixth section;

--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -4,7 +4,7 @@
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
 					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
-							src="../img/ico/tg-ico.svg" alt="" /></a>
+							src="../img/ico/vk-ico.svg" alt="" /></a>
 				</div>
 				<div class="socials__item">
 					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
@@ -323,12 +323,12 @@
 
 			<div class="four-screen__bcg container-content container-content--no-margin">
 				<div class="container-relative">
-					<img class="four-screen__rama-item" src="../img/Product-page/1-screen-2-elem.svg" alt="" />
+					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-1-item.png" alt="" />
 					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-3-item.png" alt="" />
 					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-2-item.png" alt="" />
 					<div class="four-screen__rama">
-						<div class="four-screen__rama-blur"></div>
-						<img class="four-screen__rama-img" src="../img/Product-page/4-screen-rama.png" alt="" />
+<!--						<div class="four-screen__rama-blur"></div>-->
+						<img class="four-screen__rama-img" src="../img/Product-page/4-screen-rama-blur.png" alt="" />
 					</div>
 					<div class="four-screen__buttons for-desc-flex">
 						<button class="button second-screen__button four-screen__button">
@@ -490,7 +490,7 @@
 
 						<div class="sixth-screen__right-part sixth-screen__content animate-element">
 							<div class="rent-content__container">
-								<p class="rent-content__title six-screen-anim for-desc-block">Аренда* и контент</p>
+								<p class="rent-content__title six-screen-anim for-desc-block">Аренда<sup class="txt-12">*</sup> и контент</p>
 								<div class="rent-content__content-wrapper">
 									<div class="rent-content__tabs six-screen-anim">
 										<div class="rent-content__tab six-screen__tab">Аренда</div>
@@ -539,7 +539,7 @@
 									</div>
 								</div>
 								<div class="list-item mt-40">
-									*третий день аренды
+									 <sup class="txt-10">*</sup>третий день аренды
 									<span>бесплатно</span>
 								</div>
 								<form id="rent-content-form" class="rent-content-form">
@@ -590,7 +590,7 @@
 										<div class="rent-content__conditionals-items six-screen-anim near-form">
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot"></div>
-												<div class="tab__key">свободное пространство - <span class="spans-highlight">1м2</span></div>
+												<div class="tab__key">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot"></div>
