-correction: sixth section#2;

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -21,10 +21,10 @@
                     </a>
                 </ul>
             </nav>
-            <div class="header-contacts__buttons">
-                <button class="button button_transparent" data-href="#rent">Купить</button>
-                <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>
-            </div>
+<!--            <div class="header-contacts__buttons">-->
+<!--                <button class="button button_transparent" data-href="#rent">Купить</button>-->
+<!--                <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>-->
+<!--            </div>-->
         </div>
         <nav class="header__subnav for-desc-block">
             <ul class="header__submenu">
