--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -53,7 +53,6 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="screen dop-screen">
 		<div class="container-page">
 			<div class="container-content container-content--no-padding">
@@ -163,7 +162,6 @@
 			</div>
 		</div>
 	</section>
-
 	<section id="characteristics" class="screen second-screen scrolling-item">
 		<div class="container-page">
 			<div class="second-screen__container container-content">
@@ -439,7 +437,6 @@
 			</div>
 		</div>
 	</section> -->
-
 	<section id="rent" class="screen sixth-screen scrolling-item">
 		<div class="container-page">
 			<div class="sixth-screen__container container-content">
@@ -671,9 +668,9 @@
 	</section>
 	<section id="portfolio" class="screen seventh-screen scrolling-item">
 		<div class="container-page-margin">
-			<div class="scroll-ico absolutX-center for-desc-block">
-				<img src="../img/ico/scroll-ico.svg" alt="" />
-			</div>
+<!--			<div class="scroll-ico absolutX-center for-desc-block">-->
+<!--				<img src="../img/ico/scroll-ico.svg" alt="" />-->
+<!--			</div>-->
 			<div class="swiper-container seventh-screen__swiper-container">
 				<div class="swiper-wrapper seventh-screen__swiper-wrapper">
 					<div class="swiper-slide seventh-screen__swiper-slide">
@@ -694,7 +691,6 @@
 			</div>
 		</div>
 	</section>
-
 	<section id="feedback" class="contact-form">
 		<div class="container-content">
 			<div class="contact-form__content">
