--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -36,7 +36,7 @@
                 <div class="footer__socials socials">
                     <a href="https://vk.com/gefestnovosib" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/vk-ico.svg" alt=""></div></a>
                     <a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div></a>
-                    <a href="https://instagram.com/gefestcapital" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div></a>
+<!--                    <a href="https://instagram.com/gefestcapital" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/inst-ico.svg" alt=""></div></a>-->
                 </div>
             </div>
         </div>
