--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,26 +4,31 @@
             <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
             <nav class="header__nav">
                 <ul class="header__menu menu">
-                    <a href="#holostand">
-                        <li class="menu__item menu-items-txt">Kelpie holostand</li>
+                    <a href="#about">
+                        <li class="menu__item menu-items-txt">Описание</li>
                     </a>
-                    <a href="#">
-                        <li class="menu__item menu-items-txt">Технологии</li>
+                    <a href="#characteristics">
+                        <li class="menu__item menu-items-txt">Характеристики</li>
                     </a>
-                    <a href="#">
-                        <li class="menu__item menu-items-txt">Сценарии использования</li>
+                    <a href="#video">
+                        <li class="menu__item menu-items-txt">Видео</li>
                     </a>
-                    <a href="#">
+                    <a href="#rent">
+                        <li class="menu__item menu-items-txt">Аренда и контент</li>
+                    </a>
+                    <a href="#portfolio">
                         <li class="menu__item menu-items-txt">Портфолио</li>
                     </a>
-                    <a href="#">
-                        <li class="menu__item menu-items-txt">Контакты</li>
+                    <a href="#feedback">
+                        <li class="menu__item menu-items-txt">Связаться</li>
                     </a>
+                    <button class="button button_transparent mob-menu__button" data-href="#rent">Купить</button>
+                    <button class="button button_purple-text mob-menu__button" data-href="#feedback">Обратная связь</button>
                 </ul>
             </nav>
-<!--            <div class="header-contacts__buttons">-->
-<!--                <button class="button button_transparent" data-href="#rent">Купить</button>-->
-<!--                <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>-->
+<!--            <div class="mob-menu__buttons">-->
+<!--                <button class="button button_transparent mob-menu__button" data-href="#rent">Купить</button>-->
+<!--                <button class="button button_purple-text mob-menu__button" data-href="#feedback">Обратная связь</button>-->
 <!--            </div>-->
         </div>
         <nav class="header__subnav for-desc-block">
