--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -10,10 +10,10 @@
 					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
 							src="../img/ico/youtube-ico.svg" alt="" /></a>
 				</div>
-				<div class="socials__item">
-					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
-							src="../img/ico/inst-ico.svg" alt="" /></a>
-				</div>
+<!--				<div class="socials__item">-->
+<!--					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"-->
+<!--							src="../img/ico/inst-ico.svg" alt="" /></a>-->
+<!--				</div>-->
 			</div>
 			<div class="scroll-ico absolutX-center for-desc-block">
 				<img src="../img/ico/scroll-ico.svg" alt="" />
@@ -310,10 +310,10 @@
 					<a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><img class="socials__ico"
 							src="../img/ico/youtube-ico.svg" alt="" /></a>
 				</div>
-				<div class="socials__item">
-					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"
-							src="../img/ico/inst-ico.svg" alt="" /></a>
-				</div>
+<!--				<div class="socials__item">-->
+<!--					<a href="https://instagram.com/gefestcapital" target="_blank"><img class="socials__ico"-->
+<!--							src="../img/ico/inst-ico.svg" alt="" /></a>-->
+<!--				</div>-->
 			</div>
 <!--			<div class="scroll-ico absolutX-center for-desc-block">-->
 <!--				<img src="../img/ico/scroll-ico.svg" alt="" />-->
@@ -487,10 +487,10 @@
 
 						<div class="sixth-screen__right-part sixth-screen__content animate-element">
 							<div class="rent-content__container">
-								<p class="rent-content__title six-screen-anim for-desc-block">Аренда<sup class="txt-12">*</sup> и контент</p>
+								<p class="rent-content__title six-screen-anim for-desc-block">Аренда и контент</p>
 								<div class="rent-content__content-wrapper">
 									<div class="rent-content__tabs six-screen-anim">
-										<div class="rent-content__tab six-screen__tab">Аренда</div>
+										<div class="rent-content__tab six-screen__tab">Аренда*</div>
 										<div class="rent-content__tab six-screen__tab">Покупка</div>
 										<div class="rent-content__tab six-screen__tab">Контент</div>
 									</div>
@@ -543,16 +543,16 @@
 									<div class="rent-content-form__row six-screen-anim">
 										<div class="form-item">
 											<label for="name"></label>
-											<input type="text" id="name" name="name" placeholder="ваше имя" />
+											<input class="form-name-js" type="text" id="name" name="name" placeholder="ваше имя" />
 										</div>
 										<div class="form-item">
 											<label for="phone"></label>
-											<input type="number" id="phone" name="phone"
-												placeholder="+7 _ _ _   _ _ _   _ _   _ _" />
+											<input class="form-phone-js" type="text" id="phone" name="phone"
+												placeholder="+7 _ _ _  _ _  _ _" />
 										</div>
 										<div class="form-item">
 											<label for="email"></label>
-											<input type="email" id="email" name="email" placeholder="Ваш email" />
+											<input class="form-mail-js" type="email" id="email" name="email" placeholder="Ваш email" />
 										</div>
 										<button
 											class="rent-content-form__submit button button_purple-text button_submit"
@@ -566,7 +566,6 @@
 											<a href="#">соглашаетесь</a>
 											на обработку персональных данных
 										</p>
-
 									</div>
 								</form>
 								<script async
@@ -586,16 +585,16 @@
 										<p class="six-screen-anim">Условия размещения</p>
 										<div class="rent-content__conditionals-items six-screen-anim near-form">
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-												<div class="tab__dot"></div>
-												<div class="tab__key">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>
+<!--												<div class="tab__dot"></div>-->
+												<div class="tab__key rent-content__tab-key rent-content__tab-dot">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-												<div class="tab__dot"></div>
-												<div class="tab__key">питание - <span class="spans-highlight">220В</span></div>
+<!--												<div class="tab__dot"></div>-->
+												<div class="tab__key rent-content__tab-key rent-content__tab-dot">питание - <span class="spans-highlight">220В</span></div>
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-												<div class="tab__dot"></div>
-												<div class="tab__key">
+<!--												<div class="tab__dot"></div>-->
+												<div class="tab__key rent-content__tab-key rent-content__tab-dot">
 													наличие свободного пространства позади для эффекта прозрачности
 												</div>
 											</div>
@@ -704,19 +703,19 @@
 					<form id="contact-form" class="rent-content-form contact-form__form">
 						<div class="rent-content-form__row">
 							<div class="form-item">
-								<label for="name"></label>
-								<input type="text" id="name" name="name" placeholder="ваше имя" />
+								<label for="name#2"></label>
+								<input class="form-name-js" type="text" id="name#2" name="name" placeholder="ваше имя" />
 							</div>
 							<div class="form-item">
-								<label for="phone"></label>
-								<input type="number" id="phone" name="phone"
-									placeholder="+7 _ _ _   _ _ _   _ _   _ _" />
+								<label for="phone#2"></label>
+								<input class="form-phone-js" type="text" id="phone#2" name="phone"
+									placeholder="+7 _ _ _  _ _  _ _" />
 							</div>
 						</div>
 						<div class="rent-content-form__row">
 							<div class="form-item">
-								<label for="email"></label>
-								<input type="email" id="email" name="email" placeholder="Ваш email" />
+								<label for="email#2"></label>
+								<input class="form-mail-js" type="email" id="email#2" name="email" placeholder="Ваш email" />
 							</div>
 						</div>
 						<div class="rent-content-form__row">
