--- a/src/html/head.html
+++ b/src/html/head.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script> -->
         <!-- <script src="js/ScrollSmoother.min.js"></script> -->
+        <link rel="icon" href="/img/Product-page/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/img/Product-page/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.min.css?v=10">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?v=2">
 
